--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'NotoSansJPWeb', Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
 
@@ -285,6 +285,18 @@ nav .navbar ul li a:hover {
     background-color: #d2d2d2;
 }
 
+.content-page .parent-1 .box-bg .center .box1 h2 {
+    padding: 20px;
+    width: 70px;
+    color: #eee;
+    background-color: #333;
+    height: fit-content;
+    font-family: 'NotoSansJPWeb', sans-serif;
+    font-weight: 700;
+    margin: 5px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+}
+
 .content-page .parent-1 .box-bg .center .right {
     width: 40%;
     height: 100%;
@@ -415,16 +427,50 @@ nav .navbar ul li a:hover {
     background-color: #eee;
 }
 
-.box-bg .content-value .text-content .box-left h2 {
+.box-bg .content-value .text-content .box-left .title {
     width: 100%;
-    height: 40px;
     border-bottom: 2px solid #333;
+    display: flex;
+    flex-direction: row;
+}
+
+.box-bg .content-value .text-content .box-left .title h2:nth-child(1) {
+    background-color: #333;
+    padding: 5px;
+    color: #eee;
+}
+
+.box-bg .content-value .text-content .box-left .title h2:nth-child(2) {
+    padding: 5px;
+    background-color: #eee;
+}
+
+.box-bg .content-value .text-content .box-left p:nth-child(4) {
+    width: 500px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
+    text-align: end;
+    font-style: italic;
+    letter-spacing: 1px;
+    font-family: 'NotoSansJPWeb', sans-serif;
+    background-color: #eee;
+    padding: 10px;
+    font-weight: 500;
 }
 
 .box-bg .content-value .text-content .box-left p {
     margin-top: 15px;
     width: 500px;
+}
 
+.box-bg .content-value .text-content .box-left p:nth-child(2) {
+    margin-top: 15px;
+    width: 500px;
+    font-family: 'NotoSansJPWeb', sans-serif;
+    font-weight: 700;
 }
 
 .box-bg .content-value .text-content .box-right {
