--- a/style.css
+++ b/style.css
@@ -226,6 +226,14 @@ nav .navbar ul li a:hover {
     border: none;
 }
 
+
+
+
+
+
+
+
+
 /* Content-Page */
 .content-page {
     background-color: #eee;
@@ -237,8 +245,8 @@ nav .navbar ul li a:hover {
 }
 
 .content-page .parent-1 {
-    border-top: 1px solid;
-    border-bottom: 1px solid;
+    border-top: 2px solid #333;
+    border-bottom: 2px solid #333;
     height: 85%;
     width: 90%;
     display: flex;
@@ -498,6 +506,132 @@ nav .navbar ul li a:hover {
 
 
 
+
+
+/* Gallery */
+.gallery-page {
+    background-color: #d2d2d2;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery-page .parent-1 {
+    border-top: 2px solid #333;
+    border-bottom: 2px solid #333;
+    height: 85%;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.gallery-page .parent-1 .bg-box {
+    background-color: #eee;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.gallery-page .parent-1 .bg-box .box-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.gallery-page .parent-1 .bg-box .box-left .box1 {
+    border-right: 15px solid #d2d2d2;
+    border-bottom: 15px solid #d2d2d2;
+    background-color: #eee;
+    width: 80px;
+    height: 80px;
+}
+
+.gallery-page .parent-1 .bg-box .box-left .box2 {
+    border-right: 15px solid #d2d2d2;
+    border-top: 15px solid #d2d2d2;
+    background-color: #eee;
+    width: 300px;
+    height: 80px;
+}
+
+.gallery-page .parent-1 .bg-box .box-right {
+    background-color: #eee;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 900px;
+    height: 100%;
+}
+
+.gallery-page .parent-1 .bg-box .box-right .box3 {
+    background-color: #eee;
+    border-bottom: 15px solid #d2d2d2;
+    width: 100%;
+    height: 150px;
+}
+
+.gallery-page .parent-1 .bg-box .box-right .box4 {
+    background-color: #eee;
+    border-top: 15px solid #d2d2d2;
+    width: 100%;
+    height: 150px;
+}
+
+.gallery-page .parent-1 .bg-box .model {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 10%;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery-page .parent-1 .bg-box .model-a {
+    width: 300px;
+    background-color: #d2d2d2;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery-page .parent-1 .bg-box .model-a .box {
+    position: relative;
+    width: 285px;
+    background-color: #eee;
+    height: 385px;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+}
+
+.gallery-page .parent-1 .bg-box .model-a .box .img {
+    background: url(/img/cont-img1.png) top center no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery-page .parent-1 .bg-box .model-a .box button {
+    z-index: 1;
+    border: none;
+    border-top: 8px solid #d2d2d2;
+    border-left: 8px solid #d2d2d2;
+    padding: 30px;
+}
+
+.gallery-page .parent-1 .bg-box .model-a .box button a {
+    font-family: 'NotoSansJPWeb', sans-serif;
+    font-weight: 700;
+    font-size: 2em;
+}
 
 
 
